--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,7 @@ a {
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+.map-container {
+  height: 70vh;
+}
